<resources>
    <string name="app_name">Task Manager</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="adding_new_project_its_name">Name of project</string>
    <string name="home_fragment_label">Home</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="project_fragment_label">Project</string>
    <string name="error_toast_db">Database loading error</string>
    <string name="home_fragment_adding_project">Add new project</string>
    <string name="add_new_project_fragment_label">Add new project</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="editProject_fragment_label">Edit project</string>
    <string name="editProject_fragment_edit_button">Apply</string>
    <string name="editProject_deleteBtn">Delete</string>
    <string name="deleting_alert_title">Delete</string>
    <string name="deleting_alert_message">Are you sure want to delete</string>
    <string name="deleting_alert_pos_btn">Yes</string>
    <string name="deleting_alert_neg_btn">No</string>
    <string name="errorToast_arguments_providing_nullError" translatable="false">Providing data to fragment error</string>
    <string name="adding_new_task_its_name">Name of task</string>
    <string name="add_task">Add new task</string>
    <string name="addTaskFragment_label">Adding task</string>
    <string name="editTaskFragment_label">Editing task</string>
    <string name="taskNameInput_blankName">Please, enter a name of the task</string>
    <string name="taskDateInput_incorrectDate">Please, enter a date in format YYYY-MM_DD</string>
    <string name="localDate_pattern">YYYY-MM-DD</string>
    <string name="dayFragment_today_label">All tasks</string>
    <string name="plannerFragment_label">Planner</string>
    <string name="weekend_string">Weekend</string>
    <string name="today_string">Today</string>
    <string name="quantitative_string">Quantitative</string>
    <string name="amount_string">Amount</string>
    <string name="badAmountForTask_toast">Please, enter a correct amount of iterations of the task</string>
    <string name="repeatEveryDay">Repeat every day</string>
    <string name="alertDialog_recomendToAddWeekends">Add holidays</string>
    <string name="alertDialog_recomendToAddWeekends_message">It is recommended to add holidays by switching \'weekend\'</string>
    <string name="ok_string">Ok</string>
    <string name="make_plan">Make plan</string>
    <string name="repeatEveryDay_exceptHolidays">Repeat every day except holidays</string>
    <string name="repeatNever">Repeat never</string>
    <string name="unableToAddTaskAlertDialog_title">Unable to add task</string>
    <string name="unableToAddTaskAlertDialog_message">Parent project of this task is not for weekends, but you are trying to add this task on a weekend</string>
    <string name="unableToUpdateTaskAlertDialog_title">Unable to update task</string>
    <string name="unableToUpdateTaskAlertDialog_message">Parent project of this task is not for weekends, but you are trying to move this task on a weekend</string>
    <string name="toastAddSomeProjects">Create at least one project first</string>
    <string name="overdue_string">Overdue</string>
    <string name="chooseDateFragment_clearFilter_btnText">Clear</string>
    <string name="AddEditTaskFragment_endDate_hint">Date of the end</string>
    <string name="addEditTaskFragment_limitedTimeChkBox">Time is limited</string>
    <string name="Toast_BadEndDate">Date of the end is less than date of the start</string>
</resources>