<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:shownIn="@id/nav_view">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home_fragment_label"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings_fragment_label"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/editProjectFragment"
        android:title="@string/editProject_fragment_label"
        android:icon="@drawable/ic_baseline_edit_24"
        app:showAsAction="ifRoom"/>

    <group android:id="@+id/menu_timeLaps_group">
        <item
            android:id="@+id/dayFragment"
            android:title="@string/dayFragment_today_label" />
        <item
            android:id="@+id/plannerFragment"
            android:title="@string/plannerFragment_label" />
    </group>
    <group android:id="@+id/projects_menu_group">

    </group>
</menu>