<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.taskmanager.fragments.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/home_fragment" >
        <action
            android:id="@+id/action_homeFragment_to_addProjectFragment"
            app:destination="@id/addProjectFragment" />
        <action
            android:id="@+id/action_homeFragment_to_editProjectFragment"
            app:destination="@id/editProjectFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.taskmanager.fragments.settings.SettingsFragment"
        android:label="@string/settings_fragment_label" />
    <fragment
        android:id="@+id/projectFragment"
        android:name="com.example.taskmanager.fragments.task_holders.project.ProjectFragment"
        tools:layout="@layout/fragment_project" >
        <argument
            android:name="currentProject"
            app:argType="com.example.taskmanager.data.project.Project" />
        <action
            android:id="@+id/action_projectFragment_to_editProjectFragment"
            app:destination="@id/editProjectFragment" />
        <action
            android:id="@+id/action_projectFragment_to_addTaskFragment"
            app:destination="@id/addTaskFragment" />
    </fragment>

    <action
        android:id="@+id/open_settings_action"
        app:destination="@id/settingsFragment" />
    <fragment
        android:id="@+id/addProjectFragment"
        android:name="com.example.taskmanager.fragments.add_project.AddProjectFragment"
        android:label="@string/add_new_project_fragment_label"
        tools:layout="@layout/fragment_add_project" />
    <fragment
        android:id="@+id/editProjectFragment"
        android:name="com.example.taskmanager.fragments.edit_project.EditProjectFragment"
        android:label="@string/editProject_fragment_label"
        tools:layout="@layout/fragment_edit_project" >
        <argument
            android:name="currentItem"
            app:argType="com.example.taskmanager.data.project.Project" />
    </fragment>
    <action
        android:id="@+id/action_global_projectFragment"
        app:destination="@id/projectFragment" />
    <fragment
        android:id="@+id/addTaskFragment"
        android:name="com.example.taskmanager.fragments.task_holders.add.AddTaskFragment"
        android:label="@string/addTaskFragment_label"
        tools:layout="@layout/fragment_add_task">
        <argument
            android:name="item"
            app:argType="com.example.taskmanager.data.project.Project"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/editTask"
        android:name="com.example.taskmanager.fragments.task_holders.edit.EditTask"
        android:label="@string/editTaskFragment_label"
        tools:layout="@layout/fragment_edit_task" >
        <argument
            android:name="item"
            app:argType="com.example.taskmanager.data.task.Task" />
    </fragment>
    <fragment
        android:id="@+id/dayFragment"
        android:name="com.example.taskmanager.fragments.task_holders.day.DayFragment"
        android:label="@string/dayFragment_today_label"
        tools:layout="@layout/fragment_day" >
        <action
            android:id="@+id/action_dayFragment_to_addTaskFragment"
            app:destination="@id/addTaskFragment" />
    </fragment>
    <action
        android:id="@+id/action_global_editTask"
        app:destination="@id/editTask" />
    <fragment
        android:id="@+id/plannerFragment"
        android:name="com.example.taskmanager.fragments.planner.PlannerFragment"
        android:label="fragment_planner"
        tools:layout="@layout/fragment_planner" />
</navigation>