<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="?actionBarSize"
    tools:context=".fragments.task_holders.add.AddTaskFragment">

    <EditText
        android:id="@+id/addTaskFragment_editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/adding_new_task_its_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/addTask_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minWidth="60dp"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <CheckBox
        android:id="@+id/addTask_chkBoxToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/today_string" />

    <EditText
        android:id="@+id/addTaskFragment_editDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/localDate_pattern"
        android:inputType="date"
        android:textAlignment="center" />

    <CheckBox
        android:id="@+id/addTaskFragment_isQTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="Quantitative" />

    <EditText
        android:id="@+id/addTaskFragment_editAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:hint="Amount"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/addTaskFragment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_task" />
</LinearLayout>